# fishcareyolo

./: README.md  readme.md
app/: app.config.ts  app.json  metro.config.js  package-lock.json  package.json  readme.md  tailwind.config.js  vite.config.ts
app/app/: +html.tsx  +not-found.tsx  _layout.tsx  results.tsx
app/components/ui/: detection-overlay.tsx  detection-result-card.tsx  icon.tsx
app/lib/model/: context.tsx  disease-info.ts  index.ts  inference.ts  manager.ts  storage.ts  types.ts
app/src/: App.tsx  config.json
docs/: IMAGE_PREPROCESSING_TODO.md  handover_prompt.md  project-context.md
expo-app/: app.json  package.json
expo-app/app/: index.tsx
expo-app/lib/: theme-context.tsx
model/: README.md  export_model.py  gate_train_colab.ipynb  pyproject.toml  readme.md  test_inference.py  train.py
model/cli/: __init__.py  download.py  evaluate.py  export.py  infer.py  train.py
model/content/model/runs/detect/fish_disease/: args.yaml  results.csv
model/dataset/: get.py
model/mina/: __init__.py  dataset.py  evaluate.py  export.py  gate_dataset.py  gate_export.py  inference.py  train.py
model/mina/core/: __init__.py  constants.py  dataset.py  model.py  types.py
model/scripts/: publish-release.sh
model/tests/: __init__.py  conftest.py  test_export.py  test_inference.py  test_training.py
python-model/: main.py  pyproject.toml
spec/: design.md  requirements.md  tasks.md
web/: index.html  package.json  tsconfig.app.json  vercel.json  vite.config.ts
web/app/: index.css  main.tsx  routes.tsx
web/dev-dist/: sw.js
web/tests/: README.md
(+70 files in other folders)
