[project]
name = "fishcareyolo"
version = "0.1.0"
description = "A YOLO Based Application for Real Time Fish Disease Detection"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "roboflow>=1.2.11",
    "ultralytics>=8.3.0",
    "torch>=2.0.0",
    "hypothesis>=6.0.0",
    "pytest>=8.0.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
]

[project.scripts]
train = "train:main"
export = "export_model:main"
test-inference = "test_inference:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
